[package]
name = "sigv4"
version = "0.1.0"
authors = ["David Barsky <me@davidbarsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.1"
ring = "0.16.9"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.5.1"
eliza_error = "0.99.1"
bytes = "0.4.12"
hex = "0.4.0"
chrono = "0.4.9"
httparse = "1.3.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
hyper = "0.13.0-alpha.4"
