[package]
name = "sigv4"
version = "0.1.0"
authors = ["David Barsky <me@davidbarsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
http-body = "0.3"
ring = "0.16.9"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.5.1"
eliza_error = "0.99.1"
bytes = "0.5"
hex = "0.4.0"
chrono = "0.4.9"
httparse = "1.3.4"

[dev-dependencies]
pretty_assertions = "0.6.1"
hyper = { git = "https://github.com/hyperium/hyper", features = ["stream"] }
hyper-rustls = "0.18.0-alpha.2"
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tokio = { version = "0.2", features = ["full"] }
futures = "0.3"