[package]
name = "sigv4"
version = "0.1.0"
authors = ["David Barsky <me@davidbarsky.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2"
http-body = "0.3"
hyper = "0.13"
ring = "0.16.9"
serde = { version = "1", features = ["derive"] }
serde_urlencoded = "0.5.1"
eliza_error = "0.99.1"
bytes = "0.5"
hex = "0.4.0"
chrono = "0.4.9"
httparse = "1.3.4"
tower = { git = "https://github.com/tower-rs/tower" }

[dev-dependencies]
pretty_assertions = "0.6.1"
hyper = "0.13"
hyper-tls = "0.4"
tower = { git = "https://github.com/tower-rs/tower" }
serde = { version = "1.0.101", features = ["derive"] }
serde_json = "1.0.41"
tokio = { version = "0.2", features = ["full"] }
futures-core = { version = "0.3", default-features = false }
futures-util = { version = "0.3", default-features = false }
