[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2018"

[dev-dependencies]
aws-sigv4 = { path = "../aws-sigv4" }
aws-sigv4-tower = { path = "../aws-sigv4-tower" }
bytes = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
http = "0.2"
http-body = "0.4"
hyper = { version = "0.14", features = ["http1", "client", "runtime"] }
hyper-tls = "0.5"
tower = { version = "0.4", git = "https://github.com/tower-rs/tower" }